# semantica-l0

./: SemanticaL0.cabal
src/: Main.hs  Semantic.hs  Syntax.hs  Types.hs
