name:                SemanticaL0
version:             0.1.0.0
homepage:            https://github.com/githubuser/SemanticaL0#readme
license:             GPL-3
author:              Leonardo M. Rodrigues
maintainer:          lmrodrigues@inf.ufrgs.br
copyright:           2017 Leonardo M. Rodrigues
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Syntax
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable SemanticaL0-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SemanticaL0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lmrodrigues/SemanticaL0
